Tests for module path reads.